# Plant_Disease_Classification_GCP

./: README.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
FastAPI/: Model.h5  main.py  requirements.txt
GCP/: main.py  pyproject.toml  requirements.txt
Model/: Model_Code_training
User_interface/: App.py  pyproject.toml
